Fix clue checkbox vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ h2 {
 
 .clue_checkbox {
     margin-left: 5px;
+    vertical-align: middle;
 }
 
 .clues .solved {
